added agency dashboard feathers

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 PORT=5000
 MONGO_URI=mongodb+srv://devanand:Ramramram9914@cluster0.1wkwmjk.mongodb.net/modelsuite?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=kdfalkj454ql3kl2kjdkfaldkfaoij4kj3$kdfjadkfjaldkfjndkfal7678dkfd
+CLOUDINARY_API_KEY=818123743591333
+CLOUDINARY_API_SECRET=aQWgm4H_4ytCMOsPk0SJ51XeQbk
+CLOUDINARY_CLOUD_NAME=duugiiwo0
 
 
