solved attachment issue

--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@ JWT_SECRET=kdfalkj454ql3kl2kjdkfaldkfaoij4kj3$kdfjadkfjaldkfjndkfal7678dkfd
 CLOUDINARY_API_KEY=818123743591333
 CLOUDINARY_API_SECRET=aQWgm4H_4ytCMOsPk0SJ51XeQbk
 CLOUDINARY_CLOUD_NAME=duugiiwo0
+META_APP_ID=1038237515172135
+META_APP_SECRET=5229b8f4b16025f6606b8b1e4ed3ce7d
 
 
