--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ JWT_SECRET=kdfalkj454ql3kl2kjdkfaldkfaoij4kj3$kdfjadkfjaldkfjndkfal7678dkfd
 CLOUDINARY_API_KEY=818123743591333
 CLOUDINARY_API_SECRET=aQWgm4H_4ytCMOsPk0SJ51XeQbk
 CLOUDINARY_CLOUD_NAME=duugiiwo0
-
+PANDADOC_API_KEY=600d489f542164920442bcb4ef184c9203d83820
+PANDADOC_API_URL=https://api.pandadoc.com/public/v1
 
