test: add testing endpoint for PandaDoc API (#1)

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ JWT_SECRET=kdfalkj454ql3kl2kjdkfaldkfaoij4kj3$kdfjadkfjaldkfjndkfal7678dkfd
 CLOUDINARY_API_KEY=818123743591333
 CLOUDINARY_API_SECRET=aQWgm4H_4ytCMOsPk0SJ51XeQbk
 CLOUDINARY_CLOUD_NAME=duugiiwo0
+PANDADOC_API_KEY=600d489f542164920442bcb4ef184c9203d83820
+PANDADOC_API_URL=https://api.pandadoc.com/public/v1
 META_APP_ID=722096453899397
 META_APP_SECRET=808d6d61b0358e97ac6f96ef6963a1d9
 PAGE_ID=646386081899723
